# one_page_ambiguity

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  init_nltk.py  manage.py  pyproject.toml  requirements.txt  requirements_prod.txt
django_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dump/: 01_glossary.json  02_keywordglossary.json
functions/: analysis.py  analysis_userstory.py  segmentation.py  well_formed.py
inputUS/: admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
inputUS/migrations/: 0001_initial.py  0002_result_remove_conceptual_well_formed_and_more.py  0003_reportuserstory.py  0004_reportuserstory_type.py  0005_userstory_element_is_problem.py  0006_reportuserstory_is_problem.py  0007_alter_reportuserstory_type.py  0008_userstory_element_parent.py  0009_alter_reportuserstory_recommendation.py  0010_project_created_at_project_created_by_and_more.py  0011_role.py  0012_reportterms.py  0013_remove_reportterms_report_reportterms_userstory.py  0014_reportterms_glossarys_remove_reportterms_keyword_and_more.py  0015_remove_reportterms_roles_role_project.py  0016_remove_reportterms_glossarys_and_more.py  0017_remove_role_project_role_userstory.py  0018_userstory_element_old_userstory.py  0019_alter_userstory_element_what_full_and_more.py  0022_processbackground.py  (+19 more)
nginx/: Dockerfile  nginx.conf
one_page_ambiguity_base/: admin.py  asgi.py  celery.py  forms.py  settings.py  urls.py  utils.py  views.py  wsgi.py
templates/: base.html  how_to_use.html  index.html
(+36 files in other folders)
