[project]
name = "django-app"
version = "0.1.0"
description = "Django project with ML and NLP capabilities"
requires-python = ">=3.9.18"
dependencies = [
    "Django==4.2.3",
    "django-extensions==3.2.3",
    "psycopg2-binary==2.9.6",
    "pandas==1.4.2",
    "numpy==1.21.5",
    "nltk==3.4.5",
    "spacy==3.6.0",
    "bitermplus==0.7.0",
    "matplotlib==3.7.1",
    "gensim==4.1.2",
    "sentence-transformers==2.3.1",
    "huggingface-hub>=0.15.0,<0.20.0",
    "transformers>=4.21.0,<5.0.0",
    "torch>=1.11.0",
    "torchvision>=0.12.0",
    "gunicorn==21.2.0",
    "Redis==5.0.0",
    "celery==5.3.4",
    "scikit-learn==1.0.2",
    "scipy==1.7.3",
    "ipython>=8.18.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "black",
    "flake8",
    "isort",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
